# sample_project

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  Makefile  README.md
lab-cpp00/: .clang-format  .clang-tidy  CMakeLists.txt  Doxyfile  Makefile  README.md  leaks_suppr.txt
lab-cpp00/src/: lib.cpp  lib.h  main.cpp
lab-cpp00/test/: test.cpp
lab00/: CMakeLists.txt  Doxyfile  Makefile  README.md
lab00/doc/: lab00.docx  lab00.md
lab00/doc/assets/: lab00.drawio
lab00/src/: lib.c  lib.h
lab00/test/: test.c
lab03-sample/doc/: lab03.txt
sample_test_libcheck/: test.c
src/: lib.c  lib.h  main.c
test/: test.c
